# Obj-File-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  Cube.cpp  Fps.cpp  Main(Deprecated).cpp  Main.cpp  MainTestParser.cpp  Makefile  ObjFileParser.cpp  ObjFileParser.h  Object.h  README.md  Vec2d.cpp  Vec2d.h  Vec3d.cpp  Vec3d.h  logs  logs3  main(deprecated).cpp  util.cpp  util.h
3DModels/: Cube.h  Faces.h  ObjModel.cpp  ObjModel.h  Object.h  Pyramid.cpp  Pyramid.h
PrimitiveModels/: Cube.cpp  Cube.h  Faces.h  ObjModel.cpp  ObjModel.h  Object.h  Pyramid.cpp  Pyramid.h
